--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
                 </div>
             </div>
         </div> 
+
+        <div class="not-found">
+            <div class="box">
+                <img src="images/404.png">
+                <p>Oops! Location not found</p>
+            </div>
+        </div>
     </div>
 
 
