--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <input type="text" placeholder="enter your location">
             <button class="bx bx-search"></button>
         </div>
+
+        <p class="city-hide">city hide</p>
+
+
         <div class="weather-box">
             <div class="box">
                 <div class="info-weather">
